# quantum-stowage-qaoa

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TICKETS.md  WORKFLOW.md  pyproject.toml  qa-security-checklist.md
.claude/agents/: architect.md  implementer.md  reviewer.md  scribe.md
.github/workflows/: ci.yml
docs/specs/: phase1-close.md  phase1-spec.md  phase2-close.md  phase2-spec.md
src/stowage/: __init__.py  __main__.py  baselines.py  cli.py  encodings.py  feasibility.py  instances.py  qaoa.py  ship.py
tests/: test_encodings_domainwall.py  test_encodings_onehot.py  test_feasibility.py  test_generator.py  test_instances.py  test_ship.py  test_smoke.py
tests/data/: stow_c4_p2_s1_toy.json  stow_c4_p2_s1_toy.optimum.json  stow_c6_p3_s2_toy.json  stow_c6_p3_s2_toy.optimum.json  stow_c6_p3_s7_toy.json  stow_c6_p3_s7_toy.optimum.json
