[project]
name = "stowage"
version = "0.0.0"
description = "QAOA demonstrator for container stowage planning — encoding & NISQ-scaling analysis"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
dependencies = [
    "qiskit>=1.2",
    "qiskit-aer>=0.15",
    "qiskit-algorithms>=0.3",
    "pennylane>=0.38",
    "dimod>=0.12",
    "dwave-neal>=0.6",
    "numpy>=1.26",
    "scipy>=1.13",
    "pydantic>=2.7",
    "plotly>=5.22",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stowage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
